(fix): homepage video doesn't stretch (#749)

--- a/src/app/modules/homepage/homepage.component.scss
+++ b/src/app/modules/homepage/homepage.component.scss
@@ -35,6 +35,8 @@
     video {
       position: absolute;
       bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
     }
   }
 
